Version 1.8.0-dev
  * Add Dockerfile and docker-compose environment with pgbouncer, see #177
  * Add documentation on how to use asyncrhonous execution using the Javascript
  ZOO-API
  * Start simplification of the runRequest function
  * Integrate optional support for OGC API - Processing implementation
  * Add the optional handleText parameter to provide pure text for
  complex data node with mimetype="text/*"
  * Fix issue in case JavaScript support is activated
  * Fix issue with GDAL profile service
  * Fix #172 for https support 
Version 1.7.0
  * Fix issue with UOM definitions in zcfg2sql
  * Make callback and HPC support independent from each other
  * Update SAGA-GIS support to version 7.2.0
  * Add support for custom MapServer style definition for raster output
  * Fix returned bbox definition #170 
  * Store semaphore status in lenv section for future deletion 
  * Update Windows support to newer compiler
  * Fix issue with UpdateStatus function from the Mono ZOO-API
  * Add logging functionality and other utility functions to the C-API
  * Return an exception for every output for which nb_pixel or
  nb_features is 0 
  * Add a shared key to the security section to differentiate the
  referenced data 
  * Add MapServer output style definition depending on the geometry
  type 
  * Add ogr.tindex service
  * Add support for literaldata input arrays and to call services
  asyncrhonously from the JavaScript ZOO-API   
  * Expose a sleep function to the JavaScript ZOO-API
  * Provide FinalizeHPC and FinalizeHPC1 services using scontrol and
  sacct respectively  
  * Store md5sum of the cached file (so, local to the WPS server) to
  compare before uploading (if different md5sum) on the HPC server 
  * Add support for R language
  * Add support for using "file://"  for referenced data input
  * Add an optional ecookie key for returning third-party cookies
  * Fix issue when parsing BoundingBox input #163 